<resources>
    <string name="app_name">ConversationalIST</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="welcome_back">Sign in</string>
    <string name="SendButton">Send</string>
    <string name="chats_overview_title">Chats</string>
    <string name="anonymous_login">Anonymous Login</string>
    <string name="choose_an_username">Choose an username</string>
    <string name="enter">Enter</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="sign_in">Sign in</string>
    <string name="log_into_your_account">Log into your account</string>
    <string name="i_don_t_have_an_account">I don\'t have an account</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="create_or_join_to_a_room">Create or join to a room</string>
    <string name="search_groups">Search groups</string>
    <string name="write">Write</string>
    <string name="chat_room">Chat Room</string>
    <string name="Create_or_search_a_Public_Room">Create or search a Public Room</string>
    <string name="chat_room_name">Chat room name</string>
    <string name="Enter_a_chat_room_name">Enter a chat room name</string>
    <string name="enter_room">Enter Room</string>
    <string name="Check_existing_Rooms">Check existing Rooms</string>
    <string name="public_room">Public Room</string>
    <string name="private_room">Private Room</string>
    <string name="geo_fence_room">Geo Fence Room</string>
    <string name="send_current_location">Send Current Location</string>
    <string name="send_input_location">Send Input Location</string>
    <string name="send_pinned_location">Send Pinned Location</string>
    <string name="room">Room</string>
    <string name="share">Share</string>
    <string name="create_a_private_room">Create a Private Room</string>
    <string name="create_room">Create Room</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="nickname">Nickname:</string>
    <string name="message">message</string>
    <string name="Create_a_GeoFence_Room">Create a GeoFence Room</string>
    <string name="Chat_room_radius">Chat room radius</string>
    <string name="Enter_the_radius">Enter the radius</string>
    <string name="Chat_room_location">Chat room location</string>
    <string name="Actual_location">Actual location</string>
    <string name="Input_location">Input location</string>
    <string name="pinned_location">Pinned location</string>
    <string name="search_location">Search location</string>
    <string name="already_have_an_account">Already have an account?</string>

</resources>