<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp"
            android:includeFontPadding="false"
            android:text="@string/chat_room"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:text="@string/Create_a_GeoFence_Room"
            android:textSize="14sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/chat_room_name"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/geoFenceChatRoomName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Enter_a_chat_room_name"
                android:inputType="text"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Chat_room_radius"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/radio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/Enter_the_radius"
                android:inputType="number"
                android:singleLine="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/Chat_room_location"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <fragment
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="230dp"
                    android:layout_height="230dp"
                    android:layout_marginTop="10dp"
                    tools:context=".MapsActivity" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp">

                    <Button
                        android:id="@+id/actual_ubi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Actual_location" />

                    <Button
                        android:id="@+id/input_ubi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Input_location" />

                    <Button
                        android:id="@+id/marker_ubi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pinned_location" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>