<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20sp"
            android:includeFontPadding="false"
            android:text="@string/chat_room"
            android:textSize="32sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:text="@string/create_or_join_to_a_room"
            android:textSize="14sp"/>

        <Button
            android:id="@+id/enterchatroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/public_room"
            android:textAlignment="center"
            android:textSize="20sp"
            />

        <Button
            android:id="@+id/privateroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/private_room"
            android:textAlignment="center"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/geofenceRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/geo_fence_room"
            android:textAlignment="center"
            android:textSize="20sp"/>

    </LinearLayout>
</ScrollView>