<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <EditText
                android:id="@+id/inputLocation"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_weight="1"
                android:text="@string/search_location"
                tools:ignore="Suspicious0dp"></EditText>

            <ImageView
                android:id="@+id/imageViewSearch"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_alignParentRight="true"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_search"
                tools:ignore="MissingConstraints" ></ImageView>

        </LinearLayout>


        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="10dp"
            tools:context=".MapsActivity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="MissingConstraints">

            <Button
                android:id="@+id/actual_ubi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:text="@string/send_current_location"
            tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/specific_ubi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:text="@string/send_input_location"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"/>

            <Button
                android:id="@+id/marker_ubi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
            android:text="@string/send_pinned_location"
            tools:ignore="MissingConstraints"
            android:layout_marginTop="20dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>
