<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="Signup"
           android:textSize="32sp"
           android:layout_marginTop="20sp"
           android:layout_marginStart="20dp"
           android:includeFontPadding="false">
       </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create your account"
            android:layout_marginStart="20dp"
            android:includeFontPadding="false"
            android:textSize="14sp">
        </TextView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_marginTop="15dp"
                android:textSize="15sp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerUsername"
                android:inputType="text"
                android:hint="Enter your username"
                android:layout_marginTop="5dp"
                android:singleLine="true"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_marginTop="15dp"
                android:textSize="15sp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerEmail"
                android:inputType="text"
                android:hint="Enter your email"
                android:layout_marginTop="5dp"
                android:singleLine="true"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_marginTop="15dp"
                android:textSize="15sp"></TextView>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/registerPassword"
                android:inputType="textPassword"
                android:hint="Enter your password"
                android:layout_marginTop="5dp"
                android:singleLine="true"></EditText>
        </LinearLayout>

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textSize="20sp">
        </Button>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account?"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:gravity="center" ></TextView>
            <Button
                android:id="@+id/signinButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="sign in"
                android:textSize="16sp"
                android:layout_marginLeft="5dp"></Button>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
